<resources>
    <string name="app_name">TodoListProject</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">Logo\n</string>
    <string name="fullname">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="returnLogin">Return to login</string>
    <string name="task_description">Task Description</string>
    <string name="date">Date</string>
    <string name="urgency">Urgency</string>
    <string name="status">Status</string>
    <string name="add_new_task">Add New Task</string>
    <string name="welcome">Hello, User!</string>
    <string name="select_date">Select Date</string>
    <string name="postponed_to">Postponed To</string>
    <string name="select_postponed_date">Select Postponed Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="save_new_task">Save New Task</string>
    <string name="logout">Logout</string>
    <string name="not_completed">Not Completed Tasks</string>
    <string name="all_task">All Tasks</string>
    <string name="complete_task">Completed Tasks</string>
    <string name="by_day">Filter by Day</string>
    <string name="filter">Filter Tasks</string>
    <string name="not_found">No tasks found</string>
    <string name="search_task">Search tasks…</string>
</resources>