<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightRed"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#333333"
        app:layout_constraintTop_toBottomOf="@id/cardViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/task_description"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textColor="#555555"
        app:layout_constraintTop_toBottomOf="@id/editTextTaskDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/select_date"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dateLabel"
        app:layout_constraintTop_toBottomOf="@id/dateLabel" />

    <TextView
        android:id="@+id/urgencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urgency"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textViewDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerUrgency"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@android:drawable/editbox_background"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/urgencyLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/spinnerUrgency"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@android:drawable/editbox_background"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/statusLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:contentDescription="@string/add_new_task"
        android:text="@string/add_new_task"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerStatus"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
